Fixing too much things
Lorem Ipsum

--- a/src/app/component/video-home-box/video-home-box.component.scss
+++ b/src/app/component/video-home-box/video-home-box.component.scss
@@ -25,14 +25,15 @@
     position: relative;
     flex-direction: column;
     width: 100%;
-    height: 60%;
-    max-height: 270px;
+    height: 100%;
+    min-height: 119px;
 
     .home_box_-_background_photo{
       width: 100%;
-      min-height: 200px;
+      min-height: 128px;
       object-fit: cover;
       object-position: 50% 30%;
+      height: 100%;
     }
 
     .home_box_-_profile_pic{
