--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,11 +23,11 @@
     .videos_grid{
       display: grid;
       margin-top: 20px;
-      grid-template-columns: repeat(2, 0.5fr);
+      grid-template-columns: repeat(3, calc(100% / 3));
       align-items: center;
-      gap: 10px
+      gap: 10px;
 
-      ;@media screen and (max-width: 750px) {
+      @media screen and (max-width: 750px) {
         grid-template-columns: repeat(1, 1fr);
       }
     }
